SubVersion: $Id$

To do:
	- video scaling
	- link port is broken (HW2 only ?!)
	- stealth I/O and mem protect (done but not enabled)
	
- 28/03/2005, version 1.80r:
	- [kevin] $1029: merged UAE 0.8.15 from tigcc-dbg branch
	- [roms]  $1030: fixed MSVC compilation and support for new UAE
		Note: there is a post-build lock with gencpu. To fix...

- 19/03/2005, version 1.80q:
	- [roms] $985: updated copyright notice.
	- [roms] $990: set main window title (for TIGCC-IDE).
	- [roms] $993: switched to GTK+ 2.6.4 for Windows.
	- [roms] $994: removed GTK deprecated code (-DGTK_DISABLE_DEPRECATED),
	         except for comm.c
	- [roms] $996: set default filename in file selectors
	- [roms] $997: more dissassembled lines of code in the debugger 
	         (resizeable).
	- [roms] $998: close the debugger when you press F5.
	- [roms] $1001: added scaling support for skin & lcd 
	         (beware: CPU intensive).
	- [roms] $1002: can send several TI files at once and added 
	         new file selectors.
	- [roms] $1008: implemented full-screen view.
	- [roms] $1009: improved CPU responsiveness of large view mode.
	- [roms] $1015: TiEmu don't use threads any longer.

- 12/03/2005, version 1.80p:
	- [kevin] $933: increased link timeout from 1.5 to 10s.
	- [kevin] $934: fixed grayscale support.
	- [kevin] $935: fixed grayscale support with double buffering.
	- [kevin] $937: allow building with -mwindows -D_WINDOWS on MinGW.
	- [roms]  $940: removed mutex at startup because we should be able to run 
		2 instances of TiEmu for virtual linking.
	- [roms]  $941: fixed ghost of RAM in $100000 on TI89,92,92+,V200.
	- [roms]  $943: fixed ghost of RAM in $000000 on Tinanium
	- [roms]  $949: fixed timer incrementing/reloading (PPhd: loop freeze)
	- [roms]  $950: can send all of 89?, 92?, 9x? and v2? to all the models
	- [roms]  $951: clean-up in ti68k_scan_images (no more cache, useless now)
	- [roms]  $952: can remove (=file delete) image from list