@@ -1,7 +1,8 @@
 /*
- * Translatable strings file generated by Glade.
- * Add this file to your project's POTFILES.in.
- * DO NOT compile it as part of your application.
+ * Chaînes de caractères à traduire générées par
+ * Glade. Ajouter ce fichier au fichier POTFILE.in
+ * de votre projet. NE PAS compiler ce fichier
+ * avec le reste de votre application.
  */
 
 gchar *s = N_("Code / Source");
@@ -36,6 +37,10 @@ gchar *s = N_("Step out (F9)");
 gchar *s = N_("Run to cursor (F4)");
 gchar *s = N_("Break (F11)");
 gchar *s = N_("Toggle breakpoint (F2)");
+gchar *s = N_("Cycle count:");
+gchar *s = N_("0");
+gchar *s = N_("0");
+gchar *s = N_("Reset");
 gchar *s = N_("Symbol:");
 gchar *s = N_("Go to _address");
 gchar *s = N_("Go to _PC");
